--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+####JPA properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/bankapi
+spring.datasource.username=root
+spring.datasource.password=admin@123
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
