--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 ####JPA properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bankapi
-spring.datasource.username=root
-spring.datasource.password=admin@123
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+# MySQL DB Details
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/bankapi
+#spring.datasource.username=root
+#spring.datasource.password=admin@123
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+#Oracle DB Details
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=praveen
+spring.datasource.password=1234
+spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
